--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.00">
+<!--   <meta name="viewport" content="width=device-width, initial-scale=1.00"> -->
   <title>🐧's antarctica</title>
 </head>
 
